udpated loading color, loading background transparent, visible particles; particles position fixed, orange color; ready to work on projects

--- a/docs/css/home.css
+++ b/docs/css/home.css
@@ -14,6 +14,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  
+  overflow: hidden;
 }
 
 .home-text .text-container {
