--- a/docs/css/loading.css
+++ b/docs/css/loading.css
@@ -102,20 +102,23 @@
 
 #loading {
   z-index: 1;
-  background: var( --body-background );
+  /* background: var( --body-background ); */
+  /* background: transparent; */
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
+
+  animation: fadeIn .5s;
 }
 
 .loading-window {
 
-  --background-color: var( --body-background-color, white);
+  --background-color: var( --body-background-color, grey);
   --border-radius-big: 6px;
   --font-size-header: 16px;
-  --car-color: var( --color-main, white);
+  --car-color: var( --color-bright, beige);
 
   color: var( --car-color );
   height: 200px;
